--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^5.11.1",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^13.1.0"
+    "nyc": "^13.1.0",
+    "lodash": ">=4.17.13"
   }
 }
